--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
     <p style="color: red;"><%= errorMessage %></p>
   <% } %>
 
-  <form action="/api/users/login" method="POST">
+  <form action="/login" method="POST">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required><br>
 
