Update code with new features/fixes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,7 +19,7 @@
     function confirmLogout() {
       const isConfirmed = confirm("Are you sure you want to logout?");
       if (isConfirmed) {
-        window.location.href = '/api/users/logout';
+        window.location.href = '/login';
       }
     }
   </script>
