Update code with new features/fixes

--- a/views/books.ejs
+++ b/views/books.ejs
@@ -14,7 +14,7 @@
     <label for="search">Search by Title or Author:</label>
     <input type="text" id="search" name="search" placeholder="Enter book title or author">
     <button type="submit">Search</button>
-    <button type="button" onclick="window.location.href='/books'">Show All Books</button>
+    <button type="button" onclick="window.location.href='/api/books'">Show All Books</button>
   </form>
 
   <!-- 新增书籍按钮 -->
