--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -10,8 +10,8 @@
   <h1>Welcome to the Library Dashboard</h1>
 
   <div>
-    <button onclick="window.location.href='/books'">Library</button>
-    <button onclick="window.location.href='/borrowRecords'">My Borrow Records</button>
+    <button onclick="window.location.href='/api/books'">Library</button>
+    <button onclick="window.location.href='/api/borrowRecords'">My Borrow Records</button>
     <button onclick="confirmLogout()">Logout</button>
   </div>
 
