Update code with new features/fixes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,7 +11,7 @@
 
   <div>
     <button onclick="window.location.href='/api/books'">Library</button>
-    <button onclick="window.location.href='/api/borrowRecords'">My Borrow Records</button>
+    <button onclick="window.location.href='/api/borrow/borrowRecords'">My Borrow Records</button>
     <button onclick="confirmLogout()">Logout</button>
   </div>
 
