Update code with new features/fixes

--- a/views/books.ejs
+++ b/views/books.ejs
@@ -30,8 +30,8 @@
       <label for="newAuthor">Author:</label>
       <input type="text" id="newAuthor" name="author" required><br>
 
-      <label for="newIsbn">ISBN:</label>
-      <input type="text" id="newIsbn" name="isbn" required><br>
+      <label for="newIsbn">ISBN (optional):</label>
+      <input type="text" id="newIsbn" name="isbn" ><br>
 
       <button type="submit">Confirm</button>
       <button type="button" onclick="hideAddBookForm()">Cancel</button>
