Update code with new features/fixes

--- a/views/books.ejs
+++ b/views/books.ejs
@@ -75,8 +75,8 @@
       <label for="editAuthor">Author:</label>
       <input type="text" id="editAuthor" name="author" required><br>
 
-      <label for="editIsbn">ISBN:</label>
-      <input type="text" id="editIsbn" name="isbn" required><br>
+      <label for="editIsbn">ISBN(optional):</label>
+      <input type="text" id="editIsbn" name="isbn" ><br>
 
       <label for="editAvailable">Available:</label>
       <input type="checkbox" id="editAvailable" name="available"><br>
