--- a/views/books.ejs
+++ b/views/books.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <div class="container"></div>
   <h1>Library Books</h1>
 
   <!-- 搜索表单 -->
