--- a/views/borrowRecords.ejs
+++ b/views/borrowRecords.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <div class="container"></div>
   <h1>My Borrow Records</h1>
 
   <!-- 显示借阅记录 -->
