--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <div class="container"></div>
   <h1>Welcome to the Library Dashboard</h1>
 
   <div>
