--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <div class="container"></div>
   <h1>Sign Up</h1>
 
   <!-- 显示错误消息 -->
