--- a/views/books.ejs
+++ b/views/books.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container">
   <h1>Library Books</h1>
 
   <!-- 搜索表单 -->
@@ -143,5 +143,6 @@
       }
     }
   </script>
+ </div>
 </body>
 </html>
