--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container">
   <h1>Welcome to the Library Dashboard</h1>
 
   <div>
@@ -24,5 +24,6 @@
       }
     }
   </script>
+ </div>
 </body>
 </html>
