--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container">
   <h1>Login</h1>
 
   <!-- 显示成功消息 -->
@@ -32,6 +32,6 @@
 
   <p>Don't have an account?</p>
   <button onclick="window.location.href='/signup'">Register</button>
-
+ </div>
 </body>
 </html>
