--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container">
   <h1>Sign Up</h1>
 
   <!-- 显示错误消息 -->
@@ -36,5 +36,6 @@
   </form>
 
   <button onclick="window.location.href='/login'">Return to Login</button>
+ </div>
 </body>
 </html>
