Update code with new features/fixes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
   <title>Login</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
-<body>
+<body class="centered">
   <div class="container">
     <h1>Login</h1>
 
