--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -32,11 +32,16 @@
         <input type="password" id="password" name="password" placeholder="Enter your password" required>
       </div>
 
-      <button type="submit" class="login-button">Login</button>
+      <!-- 按钮组 -->
+      <div class="button-group">
+        <button type="submit" class="login-button">Login</button>
+      </div>
     </form>
 
     <p>Don't have an account?</p>
-    <button class="register-button" onclick="window.location.href='/signup'">Register</button>
+    <div class="button-group">
+      <button class="register-button" onclick="window.location.href='/signup'">Register</button>
+    </div>
   </div>
 </body>
 </html>
